--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,21 @@
 			<artifactId>angularjs</artifactId>
 			<version>1.7.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>5.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>feather-icons</artifactId>
+			<version>4.10.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>chart.js</artifactId>
+			<version>2.7.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
