--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.3.RELEASE</version>
+		<version>2.1.5.RELEASE</version>
 		<relativePath/>
 	</parent>
 	<groupId>local.example</groupId>
@@ -45,17 +45,17 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
-			<version>4.2.1</version>
+			<version>4.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>angularjs</artifactId>
-			<version>1.7.6</version>
+			<version>2.0.0-alpha.22</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>font-awesome</artifactId>
-			<version>5.6.3</version>
+			<version>5.8.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
@@ -65,12 +65,12 @@
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
 			<artifactId>chart.js</artifactId>
-			<version>2.7.3</version>
+			<version>2.8.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars</groupId>
+			<groupId>org.webjars.npm</groupId>
 			<artifactId>vue</artifactId>
-			<version>2.5.16</version>
+			<version>2.6.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -81,7 +81,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>27.0.1-jre</version>
+			<version>27.1-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -91,12 +91,12 @@
 		<dependency>
 			<groupId>org.ojalgo</groupId>
 			<artifactId>ojalgo</artifactId>
-			<version>47.0.0</version>
+			<version>47.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ojalgo</groupId>
 			<artifactId>ojalgo-commons-math3</artifactId>
-			<version>2.47.2</version>
+			<version>2.47.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ojalgo</groupId>
@@ -112,17 +112,17 @@
 		<dependency>
 			<groupId>org.tensorflow</groupId>
 			<artifactId>tensorflow</artifactId>
-			<version>1.13.0-rc0</version>
+			<version>1.13.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.tensorflow</groupId>
 			<artifactId>libtensorflow</artifactId>
-			<version>1.13.0-rc0</version>
+			<version>1.13.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.tensorflow</groupId>
 			<artifactId>libtensorflow_jni_gpu</artifactId>
-			<version>1.13.0-rc0</version>
+			<version>1.13.1</version>
 		</dependency>
 
 		<dependency>
