--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<version>4.22.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.webjars.npm</groupId>
 			<artifactId>chart.js</artifactId>
 			<version>2.8.0</version>
@@ -68,6 +73,12 @@
 			<groupId>org.webjars</groupId>
 			<artifactId>qunit</artifactId>
 			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 
 		<dependency>
